--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Sitor</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bckground">Bckground</string>
     <string name="title_activity_login">LoginActivity</string>
@@ -14,8 +13,14 @@
     <string name="login_failed">"Login failed"</string>
     <string name="register">Register</string>
     <string name="hello">Hello</string>
-    <string name="main_menu">Main menu</string>
     <string name="item_name">item name</string>
     <string name="the_cost_is">The cost is :</string>
     <string name="effects_of_the_item">Effects of the item :</string>
+    <string name="current_coins">Current Coins :</string>
+    <string name="inventory">Inventory</string>
+    <string name="equipment">Equipment</string>
+    <string name="battle">Battle</string>
+    <string name="main_menu">Main menu</string>
+    <string name="attack">Attack</string>
+    <string name="run_away">Run away</string>
 </resources>
